manifests/bases/frontend-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: containerrepoakstest.azurecr.io/frontend-app:SET_TAG_IN_OVERLAY
          command: ["npm"]
          args: ["run", "server"]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
            requests:
              memory: 512Mi
              cpu: "500m"
