manifests/bases/frontend-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-app
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: frontend-app
